src/views/Home/Home.scss
@import "/src/sass/mixins.scss";
@import "/src/sass/variables.scss";
@import "/src/sass/colors.scss";

.home {
  display: flex;
  align-items: center;
  flex-direction: column;
  position: relative;
  z-index: 0;
  background-color: #e3e6e6;

  .slick-list {
    width: 1435px;
  }

  @media (max-width: 1435px) {
    .slick-list {
      width: 100%;
    }
  }

  .background-spacing {
    width: 1280px;
    position: absolute;
    z-index: -1;
    overflow: hidden;

    .home-background {
      height: 600px;
      cursor: pointer;
    }

    .home-background-left {
      height: 600px;
      animation: left 0.5s forwards;
    }

    @keyframes left {
      from {
        margin-left: 0;
      }
      to {
        margin-left: 1500px;
      }
    }

    .home-background-right {
      height: 600px;
      animation: right 0.5s forwards;
    }

    @keyframes right {
      from {
        margin-left: 0;
      }
      to {
        margin-left: -1500px;
      }
    }

    .home-background-left-switch {
      height: 600px;
      position: absolute;
      top: 0;
      left: 0;
      animation: left-switch 0.5s forwards;
    }

    @keyframes left-switch {
      from {
        left: -1500px;
      }
      to {
        left: 0;
      }
    }

    .home-background-right-switch {
      height: 600px;
      position: absolute;
      top: 0;
      left: 1500px;
      animation: right-switch 0.5s forwards;
    }

    @keyframes right-switch {
      from {
        left: 1500px;
      }
      to {
        left: 0;
      }
    }

    .left-button {
      width: 80px;
      height: 250px;
      position: absolute;
      top: 0;
      left: 74px;
      border: none;
      background-color: transparent;
      cursor: pointer;

      img {
        width: 34px;
        height: 39px;
      }
    }

    .right-button {
      width: 80px;
      height: 250px;
      position: absolute;
      top: 0;
      right: 74px;
      border: none;
      background-color: transparent;
      cursor: pointer;

      img {
        width: 34px;
        height: 39px;
      }
    }

    .left-button:focus,
    .right-button:focus {
      box-shadow: inset 0 0 0 2px #fff, inset 0 0 0 4px #008296;
    }
  }

  .category-grid {
    display: grid;
    grid-template-columns: 270px 270px 270px 270px 270px;
    column-gap: 20px;
    row-gap: 20px;
    padding: 20px;
    margin-top: 231px;

    .home-page-category {
      height: 330px;
      padding: 20px;
      overflow: hidden;
      background-color: #ffffff;
      cursor: pointer;

      h2 {
        margin-bottom: 10px;
        font-size: 18px;
      }

      img {
        max-height: 168px;
        margin-bottom: 15px;
      }

      a {
        @include linkHoverEffect;
        font-size: $font-size-13px;
        color: $secondary-link-text-color;
        text-decoration: none;
      }
    }

    .home-page-category-grid {
      height: 330px;
      padding: 20px;
      overflow: hidden;
      background-color: #ffffff;
      cursor: pointer;

      h2 {
        margin-bottom: 10px;
        font-size: 18px;
      }

      .home-page-category-grid-spacing {
        display: grid;
        grid-template-columns: 130px 120px;
        row-gap: 10px;
        justify-content: center;
        align-items: center;
        margin-bottom: 25px;

        .image-title {
          .home-page-category-grid-image {
            width: 120px;
            height: 80px;
            display: flex;
            flex-direction: column;
            justify-content: center;
            align-items: center;
            background-color: #f3f3f394;

            img {
              max-height: 82px;
              max-width: max-content;
              padding-bottom: 5px;
            }
          }
        }

        p {
          width: 110px;
          font-size: $font-size-13px;
          text-decoration: none;
          display: inline-block;
          white-space: nowrap;
          overflow: hidden !important;
          text-overflow: ellipsis;
        }
      }

      a {
        @include linkHoverEffect;
        font-size: $font-size-13px;
        color: $secondary-link-text-color;
        text-decoration: none;
      }
    }
  }
  @media (max-width: 1452px) {
    .category-grid {
      display: grid;
      grid-template-columns: 270px 270px 270px 270px;
    }
  }

  @media (max-width: 1292px) {
    .background-spacing {
      width: 1140px;

      img {
        height: auto;
      }
    }
  }

  @media (max-width: 1161px) {
    .category-grid {
      grid-template-columns: 270px 270px 270px;
    }

    .background-spacing {
      width: 849px;

      img {
        height: auto;
      }
    }
  }

  @media (max-width: 863px) {
    .category-grid {
      grid-template-columns: 270px 270px;
    }
  }

  @media (max-width: 575px) {
    .category-grid {
      grid-template-columns: auto;

      .home-page-category {
        height: auto;
        display: flex;
        justify-content: center;
        flex-direction: column;

        img {
          max-height: max-content;
        }
      }

      .home-page-category-grid {
        margin: 0 43px;

        h2 {
          margin-bottom: 24px;
        }
      }
    }

    .background-spacing {
      width: 100%;

      .home-background {
        max-height: 219px;
      }

      .home-background-left {
        max-height: 219px;
      }

      .home-background-right {
        max-height: 219px;
      }

      .home-background-left-switch {
        max-height: 219px;
      }

      .home-background-right-switch {
        max-height: 219px;
      }
    }
  }
}

